added random forest model

--- a/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
+++ b/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {
         "id": "BLMxG7n1TL5T"
       },
@@ -27,14 +27,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {
         "id": "E_WJ8dasT9Ra",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 270
         },
-        "outputId": "0658ece8-7f5e-4d3c-86cb-862cc1296065"
+        "outputId": "76897d23-a00a-485f-e55f-879d56ac5883"
       },
       "outputs": [
         {
@@ -64,7 +64,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-31cafae1-28b7-47bb-979d-311e1e08b85d\">\n",
+              "  <div id=\"df-93ec84b0-aa94-43bf-a653-a085cdaa6218\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -177,7 +177,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-31cafae1-28b7-47bb-979d-311e1e08b85d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93ec84b0-aa94-43bf-a653-a085cdaa6218')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -228,12 +228,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-31cafae1-28b7-47bb-979d-311e1e08b85d button.colab-df-convert');\n",
+              "          document.querySelector('#df-93ec84b0-aa94-43bf-a653-a085cdaa6218 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-31cafae1-28b7-47bb-979d-311e1e08b85d');\n",
+              "          const element = document.querySelector('#df-93ec84b0-aa94-43bf-a653-a085cdaa6218');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -256,7 +256,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 10
         }
       ],
       "source": [
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "z4-gQHeaUAn3",
         "colab": {
@@ -349,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -518,9 +518,9 @@
           "height": 270
         },
         "id": "BZmMyzPLcCCN",
-        "outputId": "e5779b55-662a-405a-f98c-ffc971821c5a"
+        "outputId": "94f29eb2-3ab1-46b4-9a86-0d416508438e"
       },
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +549,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-662151b3-309b-4a4b-85c0-2f5985f69bdf\">\n",
+              "  <div id=\"df-54959273-cda5-4e32-85ee-6c554cf948cd\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -656,7 +656,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-662151b3-309b-4a4b-85c0-2f5985f69bdf')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-54959273-cda5-4e32-85ee-6c554cf948cd')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -707,12 +707,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-662151b3-309b-4a4b-85c0-2f5985f69bdf button.colab-df-convert');\n",
+              "          document.querySelector('#df-54959273-cda5-4e32-85ee-6c554cf948cd button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-662151b3-309b-4a4b-85c0-2f5985f69bdf');\n",
+              "          const element = document.querySelector('#df-54959273-cda5-4e32-85ee-6c554cf948cd');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -735,13 +735,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "5rzkpMchUD1-",
         "colab": {
@@ -994,7 +994,7 @@
       "metadata": {
         "id": "28AH-TQfGNA3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1010,7 +1010,7 @@
         "id": "hPsAhGFIHbFe",
         "outputId": "fbdccfed-1942-40fa-8dc8-c743d2f1b627"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1199,7 +1199,7 @@
         "id": "wTaV8NezpTKU",
         "outputId": "a2cfa733-3b1d-4228-d9c9-d59737f624c8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1238,7 +1238,7 @@
       "metadata": {
         "id": "xkM1950_emdf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1268,7 +1268,7 @@
         "id": "Kun-rw0QcwMX",
         "outputId": "d1f45062-ed72-4b19-a295-b3cc7dc0d9a2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1328,7 +1328,7 @@
           "height": 609
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1372,7 +1372,7 @@
         "id": "ytmjdnuKdz_R",
         "outputId": "08b19fe0-11fb-4ea9-f555-97b5110efd0a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1423,7 +1423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1503,7 +1503,7 @@
         "id": "1y2_qD1644SK",
         "outputId": "ddd720ea-711f-46eb-8c7b-d07b98be12a7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1519,7 +1519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1549,7 +1549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1593,7 +1593,7 @@
         "id": "VQHO7GcfjIPb",
         "outputId": "6aba5ce7-ee8e-4129-c3f9-7e54825de620"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1609,7 +1609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1639,7 +1639,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1667,7 +1667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1728,7 +1728,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1762,7 +1762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1796,7 +1796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1950,7 +1950,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1992,7 +1992,7 @@
         "id": "0V6PCzYLv4pa",
         "outputId": "f7f62030-9084-4e63-fc6d-bd1782623941"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2034,7 +2034,7 @@
         "id": "jiSFyDMDCMD5",
         "outputId": "28e4cab6-642a-4dc4-b325-5155ae0470e5"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2083,7 +2083,7 @@
           "height": 566
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2099,7 +2099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2128,7 +2128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "I7HdZ6ma-aiw",
         "colab": {
@@ -2170,7 +2170,7 @@
         "id": "J05SbflKONjN",
         "outputId": "abcf4292-7a9e-49a0-b46a-36e185406b88"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2214,7 +2214,7 @@
         "id": "5p9CpQG11OQQ",
         "outputId": "70adb652-3047-450f-dbe4-0992ef56a963"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2265,7 +2265,7 @@
         "id": "veuOaQso3ryI",
         "outputId": "1e1cf668-676c-4038-da66-2e41c7878a09"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2586,7 +2586,7 @@
       "metadata": {
         "id": "s4u8wuLWz5mU"
       },
-      "execution_count": 34,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -2610,7 +2610,7 @@
       "metadata": {
         "id": "GX7pCVAYqpdp"
       },
-      "execution_count": 35,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -2633,9 +2633,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rCoK1rNJsOaJ",
-        "outputId": "2a887d17-fc99-42d5-d26c-dec0e50599ab"
+        "outputId": "9cc18be9-e66c-4f78-b8d8-8fbb8fa23a90"
       },
-      "execution_count": 36,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -2690,7 +2690,7 @@
         "id": "jnTvN4iBGMn0",
         "outputId": "13494b99-5e0e-43be-bab9-2b958b5cf718"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2748,7 +2748,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2791,7 +2791,7 @@
       "metadata": {
         "id": "SDMFlndhhQJP"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2832,7 +2832,7 @@
           "height": 611
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2867,7 +2867,7 @@
           "height": 238
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3071,7 +3071,7 @@
           "height": 492
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3104,7 +3104,7 @@
           "height": 112
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3289,7 +3289,7 @@
           "height": 611
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3314,7 +3314,7 @@
       "metadata": {
         "id": "TqKsM46vFEaC"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3337,7 +3337,7 @@
       "metadata": {
         "id": "81FPSGLMFLLy"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3358,7 +3358,7 @@
       "metadata": {
         "id": "RUDDs1IMHiuz"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3369,7 +3369,7 @@
       "metadata": {
         "id": "Cc6ey3S-sUqD"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3410,7 +3410,7 @@
         },
         "outputId": "78fc42b0-37c5-4048-b1a4-2d86f00fe7d3"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3673,7 +3673,7 @@
         "id": "IHMd9zBGoK92",
         "outputId": "4135bbc2-0b77-4a09-cf55-8b7505b7692a"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3769,7 +3769,7 @@
         },
         "outputId": "7cfa303c-5302-4000-c046-c12c87477e8a"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3820,7 +3820,7 @@
       "metadata": {
         "id": "EPBw7a90XujG"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3836,7 +3836,7 @@
           "height": 364
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4181,7 +4181,7 @@
           "height": 863
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4243,7 +4243,7 @@
           "height": 616
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4297,7 +4297,7 @@
       "metadata": {
         "id": "7NqZqyw3rvx9"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4306,7 +4306,7 @@
       "metadata": {
         "id": "kEu9N5K-yMWg"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4358,7 +4358,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4389,7 +4389,7 @@
         },
         "outputId": "a57c33f4-fd42-4ea1-b613-0f497e1bcf09"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4422,7 +4422,7 @@
         "id": "a9TxTrJOmEwe",
         "outputId": "5f768057-68f7-4c10-94d7-4d87b3fda568"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4434,6 +4434,56 @@
           },
           "metadata": {},
           "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Random Forest (with GridSearch) - Rima"
+      ],
+      "metadata": {
+        "id": "tryGKZWNZ37W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "num = ['Customer_care_calls', 'Customer_rating', 'Cost_of_the_Product', 'Prior_purchases', 'Discount_offered', 'Weight_in_gms']\n",
+        "rf = RandomForestClassifier(random_state=42)\n",
+        "\n",
+        "#hyperparameters\n",
+        "param = {\n",
+        "    'n_estimators': [100, 200],\n",
+        "    'max_depth': [2, 5, 10],\n",
+        "    'max_features': ['sqrt', 'log2', 'auto'],\n",
+        "    'criterion': ['gini', 'entropy']\n",
+        "}\n",
+        "\n",
+        "rfg = GridSearchCV(rf, param, cv=5)\n",
+        "rfg.fit(x_train[num], y_train)\n",
+        "    \n",
+        "#best hyperparameters\n",
+        "print(rfg.best_params_)"
+      ],
+      "metadata": {
+        "id": "XXCIDMSTZ5A1",
+        "outputId": "cf8c40aa-efce-45ef-ebce-707f77e70351",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'criterion': 'entropy', 'max_depth': 5, 'max_features': 'sqrt', 'n_estimators': 200}\n"
+          ]
         }
       ]
     }
