Add Label Encoding Using Sklearn

--- a/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
+++ b/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "BLMxG7n1TL5T"
       },
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "E_WJ8dasT9Ra",
         "colab": {
@@ -349,7 +349,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -520,7 +520,7 @@
         "id": "BZmMyzPLcCCN",
         "outputId": "25e481bb-c220-4da7-d257-e936a9cdb3a8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2586,7 +2586,7 @@
       "metadata": {
         "id": "s4u8wuLWz5mU"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2610,7 +2610,7 @@
       "metadata": {
         "id": "GX7pCVAYqpdp"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2635,7 +2635,7 @@
         "id": "rCoK1rNJsOaJ",
         "outputId": "5b793f62-1e9f-4c3a-807d-778c29806a68"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3662,6 +3662,73 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Label Encoding (with Sklearn)"
+      ],
+      "metadata": {
+        "id": "WBVtJtnH3VpV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Label Encoder\n",
+        "label_encoder = preprocessing.LabelEncoder()\n",
+        "x_train['Gender_map']= label_encoder.fit_transform(x_train['Gender'])\n",
+        "x_train['Gender_map'].unique()"
+      ],
+      "metadata": {
+        "id": "r49dXKsa3MtM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# One Hot Encoder\n",
+        "\n",
+        "OHE = preprocessing.OneHotEncoder()\n",
+        "data_OHE_blok = OHE.fit_transform(x_train[['Warehouse_block']]).toarray()\n",
+        "df_OHE_blok = pd.DataFrame(data_OHE_blok, columns=['Blok_' + i for i in OHE.categories_[0]])\n",
+        "x_train = pd.concat([x_train, df_OHE_blok], axis=1)\n",
+        "\n",
+        "OHE = preprocessing.OneHotEncoder()\n",
+        "data_OHE_mode = OHE.fit_transform(x_train[['Mode_of_Shipment']]).toarray()\n",
+        "df_OHE_mode = pd.DataFrame(data_OHE_mode, columns=['metode_' + str(i) for i in OHE.categories_[0]])\n",
+        "x_train = pd.concat([x_train, df_OHE_mode], axis=1)"
+      ],
+      "metadata": {
+        "id": "OtrGFuD03RUz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Ordinal Encoder\n",
+        "\n",
+        "from sklearn.preprocessing import OrdinalEncoder\n",
+        "\n",
+        "\n",
+        "# create a subset of the data with only the 'pekerjaan' column\n",
+        "urutan = ['low', 'medium', 'high']\n",
+        "\n",
+        "# Inisialisasi encoder\n",
+        "orde = OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1, categories=[urutan])\n",
+        "\n",
+        "# fit and transform OrdinalEncoder to the 'pekerjaan' column\n",
+        "x_train['product'] = orde.fit_transform(x_train[['Product_importance']])"
+      ],
+      "metadata": {
+        "id": "WDYbhM9I3TQK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "x_train.columns"
@@ -4478,7 +4545,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4504,7 +4571,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4622,7 +4689,7 @@
       "metadata": {
         "id": "nDbLfI9yf5A2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
