model random forest grid & random

--- a/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
+++ b/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "BLMxG7n1TL5T"
       },
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "E_WJ8dasT9Ra",
         "colab": {
@@ -520,7 +520,7 @@
         "id": "BZmMyzPLcCCN",
         "outputId": "31e0fc62-5ed5-4eb7-bb8b-cc2c4e88bffb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2251,7 +2251,7 @@
       "metadata": {
         "id": "s4u8wuLWz5mU"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2275,7 +2275,7 @@
       "metadata": {
         "id": "GX7pCVAYqpdp"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2300,7 +2300,7 @@
         "id": "rCoK1rNJsOaJ",
         "outputId": "5cbcd724-81e7-4770-c3b8-1b5e25f120a1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2357,7 +2357,7 @@
         "id": "jnTvN4iBGMn0",
         "outputId": "f8494b67-ab04-46bb-a6e5-92332c171b3d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2397,7 +2397,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2581,7 +2581,7 @@
           "height": 237
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2785,7 +2785,7 @@
           "height": 492
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2818,7 +2818,7 @@
           "height": 112
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3003,7 +3003,7 @@
           "height": 572
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3124,7 +3124,7 @@
         },
         "outputId": "80708cac-6292-4826-c742-cb7d07110c31"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3400,7 +3400,7 @@
           "height": 217
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -3952,7 +3952,7 @@
       "metadata": {
         "id": "EPBw7a90XujG"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3968,7 +3968,7 @@
           "height": 364
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4572,7 +4572,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Random Forest (with GridSearch) - Rima"
+        "## 3.2.1 Random Forest (with GridSearch) - Rima"
       ],
       "metadata": {
         "id": "tryGKZWNZ37W"
@@ -4655,7 +4655,117 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Logistic Regression (With Random Search) - Syafiq (In Progress)"
+        "## 3.2.2 Random Forest (Grid & Random dengan 1 hyperparameter) - Mufid"
+      ],
+      "metadata": {
+        "id": "MaB2dF-VblbU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "rfc = RandomForestClassifier()\n",
+        "param_grid = {\n",
+        "    'n_estimators' : [100, 200],\n",
+        "    'criterion' : ['gini', 'mse', 'entropy'],\n",
+        "    'max_depth' : [None, 5, 10, 100],\n",
+        "    # 'min_samples_split' : [2, 10], #optional\n",
+        "    # 'min_samples_leaf' : [1, 5], #optional\n",
+        "    'max_features' : ['sqrt', 'log2', None, 'auto'],\n",
+        "    # 'bootstrap' :[True, False], #optional\n",
+        "    # 'random_state' : [25, 42] #optional\n",
+        "}\n",
+        "# masih bingung nentuin apa aja hyperparameters yang perlu dicantumin\n",
+        "\n",
+        "# perform a grid search with cross-validation to find the best hyperparameters \n",
+        "grid_search = GridSearchCV(rfc, param_grid, cv = 5)\n",
+        "grid_search.fit(x_train, y_train) # ini nggak bisa karena outlier di y_train nggak dibuang \n",
+        "\n",
+        "random_search = RandomizedSearchCV(rfc, param_grid, cv=5)\n",
+        "random_search.fit(x_train, y_train)\n",
+        "\n",
+        "# print the best hyperparameters \n",
+        "print('using grid search :', grid_search.best_params_)\n",
+        "print('using random search :',random_search.best_params_)"
+      ],
+      "metadata": {
+        "id": "CdfyFsfrbzks"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, jaccard_score, log_loss\n",
+        "\n",
+        "rfc_grid = RandomForestClassifier(random_state=25, max_features= None, n_estimators=100, criterion='gini', max_depth=5) # mengikuti hasil dari best_params_\n",
+        "rfc_grid.fit(x_train, y_train)"
+      ],
+      "metadata": {
+        "id": "UVBIO-tDcBPM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = rfc_grid.predict(x_test_transform) #x_test_transform belum dimasukkan \n",
+        "print('Accuracy score :', round(accuracy_score(y_test, y_pred)*100, 2), '%')\n",
+        "print('/n')\n",
+        "print('F-1 Score :', (f1_score(y_test, y_pred, average='micro')))\n",
+        "print('Precision Score :', (precision_score(y_test, y_pred, average='micro')))\n",
+        "print('Recall Score :', (recall_score(y_test, y_pred, average='micro')))\n",
+        "print('Jaccard Score :', (jaccard_score(y_test, y_pred, average='micro')))\n",
+        "print('Log Loss :', (log_loss(y_test, y_pred)))"
+      ],
+      "metadata": {
+        "id": "79g8p265cFqY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# random\n",
+        "fc_random = RandomForestClassifier(random_state=25, max_features= 'sqrt', n_estimators=200, criterion='entropy', max_depth=5) # mengikuti hasil dari best_params_\n",
+        "rfc_random.fit(x_train, y_train)"
+      ],
+      "metadata": {
+        "id": "kBTU3WY3cR7x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = rfc_random.predict(x_test_transform)\n",
+        "print('Accuracy score :', round(accuracy_score(y_test, y_pred)*100, 2), '%')\n",
+        "print('/n')\n",
+        "print('F-1 Score :', (f1_score(y_test, y_pred, average='micro')))\n",
+        "print('Precision Score :', (precision_score(y_test, y_pred, average='micro')))\n",
+        "print('Recall Score :', (recall_score(y_test, y_pred, average='micro')))\n",
+        "print('Jaccard Score :', (jaccard_score(y_test, y_pred, average='micro')))\n",
+        "print('Log Loss :', (log_loss(y_test, y_pred)))"
+      ],
+      "metadata": {
+        "id": "dhlcLn5mccyl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3.3  Logistic Regression (With Random Search) - Syafiq (In Progress)"
       ],
       "metadata": {
         "id": "B8RNOIjrfvgW"
@@ -4872,7 +4982,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "k-Nearest Neighbor (Uni) tapi masih error"
+        "## 3.4 k-Nearest Neighbor (Uni) tapi masih error"
       ],
       "metadata": {
         "id": "fVxsRNwkRQzn"
@@ -4912,7 +5022,7 @@
           "height": 380
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -4934,7 +5044,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
