--- a/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
+++ b/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
@@ -5039,6 +5039,49 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model XGBoost (masih error) - Raffi"
+      ],
+      "metadata": {
+        "id": "adXlpXgTfIMt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import xgboost as xgb\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "params = {\n",
+        "    'max_depth': 3,\n",
+        "    'objective': 'binary:logistic',\n",
+        "    'eval_metric': 'logloss',\n",
+        "    'eta': 0.1,\n",
+        "    'subsample': 0.7,\n",
+        "    'colsample_bytree': 0.7,\n",
+        "    'seed': 42\n",
+        "}\n",
+        "num_rounds = 100\n",
+        "\n",
+        "dtrain = xgb.DMatrix(x_train, label=y_train)\n",
+        "dtest = xgb.DMatrix(x_test)\n",
+        "\n",
+        "xgb_model = xgb.train(params, dtrain, num_rounds)\n",
+        "\n",
+        "y_pred = xgb_model.predict(dtest)\n",
+        "y_pred_binary = [round(pred) for pred in y_pred]\n",
+        "\n",
+        "accuracy = accuracy_score(y_test, y_pred_binary)\n",
+        "print(f\"Accuracy: {accuracy}\")"
+      ],
+      "metadata": {
+        "id": "KGnNkFtsfP8v"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
