Edit Data Encoding fot data test & train (with sklearn)

--- a/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
+++ b/Final_Project_DS_Rakamin_Batch_31_Kelompok_4_(Cobra).ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "BLMxG7n1TL5T"
       },
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "E_WJ8dasT9Ra",
         "colab": {
@@ -520,7 +520,7 @@
         "id": "BZmMyzPLcCCN",
         "outputId": "e1637e7c-42b8-42a9-afda-2360c8ed2e39"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2204,7 +2204,7 @@
         "id": "5p9CpQG11OQQ",
         "outputId": "1bcf2d48-bac1-4807-cb85-867cf6776dc4"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3397,7 +3397,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Label Encoding (with Sklearn)"
+        "### Label Encoding For data train & test (with Sklearn)"
       ],
       "metadata": {
         "id": "WBVtJtnH3VpV"
@@ -3406,10 +3406,24 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn import preprocessing\n",
+        "from sklearn.preprocessing import OrdinalEncoder"
+      ],
+      "metadata": {
+        "id": "hzRtmX-rldLN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Label Encoder\n",
         "label_encoder = preprocessing.LabelEncoder()\n",
         "x_train['Gender_map']= label_encoder.fit_transform(x_train['Gender'])\n",
-        "x_train['Gender_map'].unique()"
+        "x_test['Gender_map']= label_encoder.fit_transform(x_test['Gender'])\n",
+        "print (x_train['Gender_map'].unique())\n",
+        "print (x_test['Gender_map'].unique())"
       ],
       "metadata": {
         "id": "r49dXKsa3MtM",
@@ -3439,15 +3453,18 @@
       "source": [
         "# One Hot Encoder\n",
         "\n",
+        "# Warehouse Block\n",
         "OHE = preprocessing.OneHotEncoder()\n",
         "data_OHE_blok = OHE.fit_transform(x_train[['Warehouse_block']]).toarray()\n",
         "df_OHE_blok = pd.DataFrame(data_OHE_blok, columns=['Blok_' + i for i in OHE.categories_[0]])\n",
         "x_train = pd.concat([x_train, df_OHE_blok], axis=1)\n",
+        "x_test = pd.concat([x_test, df_OHE_blok], axis=1)\n",
         "\n",
-        "OHE = preprocessing.OneHotEncoder()\n",
+        "# Mode_of_shipment\n",
         "data_OHE_mode = OHE.fit_transform(x_train[['Mode_of_Shipment']]).toarray()\n",
         "df_OHE_mode = pd.DataFrame(data_OHE_mode, columns=['metode_' + str(i) for i in OHE.categories_[0]])\n",
-        "x_train = pd.concat([x_train, df_OHE_mode], axis=1)"
+        "x_train = pd.concat([x_train, df_OHE_mode], axis=1)\n",
+        "x_test = pd.concat([x_test, df_OHE_blok], axis=1)"
       ],
       "metadata": {
         "id": "OtrGFuD03RUz"
@@ -3459,18 +3476,17 @@
       "cell_type": "code",
       "source": [
         "# Ordinal Encoder\n",
+        "# Product Importance\n",
         "\n",
-        "from sklearn.preprocessing import OrdinalEncoder\n",
-        "\n",
-        "\n",
-        "# create a subset of the data with only the 'pekerjaan' column\n",
+        "# create a subset of the data with only the 'Product_importance' column\n",
         "urutan = ['low', 'medium', 'high']\n",
         "\n",
         "# Inisialisasi encoder\n",
         "orde = OrdinalEncoder(handle_unknown='use_encoded_value', unknown_value=-1, categories=[urutan])\n",
         "\n",
-        "# fit and transform OrdinalEncoder to the 'pekerjaan' column\n",
-        "x_train['product'] = orde.fit_transform(x_train[['Product_importance']])"
+        "# fit and transform OrdinalEncoder to the 'Product_importance' column\n",
+        "x_train['product'] = orde.fit_transform(x_train[['Product_importance']])\n",
+        "x_test['product'] = orde.fit_transform(x_test[['Product_importance']])"
       ],
       "metadata": {
         "id": "WDYbhM9I3TQK"
@@ -3508,6 +3524,17 @@
           "execution_count": 50
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_test.columns"
+      ],
+      "metadata": {
+        "id": "AKc8ZpO_maYG"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
